--- a/docs/guides/gcp-oss-cf/director-secrets.yml.erb
+++ b/docs/guides/gcp-oss-cf/director-secrets.yml.erb
@@ -1,7 +1,5 @@
 <%
- common_secret = ENV['common_secret']
- 
- raise "Expected envrionment variable 'common_secret' to be set" if (common_secret || "") == ""
+ raise "Expected environment variable 'common_secret' to be set" if ENV['common_secret'] == nil || ENV['common_secret'] == ''
 %>
 
 routing-cf-client-secret: <%=common_secret %> # UAA client secret for routing client
