--- a/docs/guides/gcp-pcf/director.yml.erb
+++ b/docs/guides/gcp-pcf/director.yml.erb
@@ -1,8 +1,8 @@
 <% 
 require 'securerandom'
 
-['project_id', 'network', 'kubo_subnet', 'kubo_zone', 'network', 'tcp_router_domain', 'cf_system_domain', 'subnet_ip_prefix'].each do |var|
-   raise "Expected environment variable '#{var}' to be set" if ENV[var] == nil || ENV[var] == ""
+%w(project_id network kubo_subnet kubo_zone network tcp_router_domain cf_system_domain subnet_ip_prefix).each do |var|
+   raise "Expected environment variable '#{var}' to be set" if ENV[var] == nil || ENV[var] == ''
 end
 
 ip_prefix = ENV['subnet_ip_prefix']
@@ -30,14 +30,14 @@ routing-cf-uaa-url: https://uaa.<%= ENV['cf_system_domain'] %> # Routing UAA URL
 bosh_release_url: http://bosh.io/d/github.com/cloudfoundry/bosh?v=261.2 # URL to  261 bosh-director release https://s3.amazonaws.com/kubo-public/bosh-dev-release.tgz, or link to a local file
 bosh_release_sha1: d4635b4b82b0dc5fd083b83eb7e7405832f6654b # SHA1 of latest stable 261 bosh-director release
 
-credhub_encryption_key: <%=SecureRandom.hex(16) %> # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
+credhub_encryption_key: <%= SecureRandom.hex(16) %> # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
 
-internal_cidr: <%=ip_prefix %>.0/24 # CIDR range that BOSH will deploy to
-internal_gw: <%=ip_prefix %>.1 # internal gateway
+internal_cidr: <%= ip_prefix %>.0/24 # CIDR range that BOSH will deploy to
+internal_gw: <%= ip_prefix %>.1 # internal gateway
 external-kubo-port: 1025 # Port to use for Kubernetes API
 
 director_name: kube # user friendly Director name
-dns_recursor_ip: <%=ip_prefix %>.1 # DNS IP address for resolving non-BOSH hostnames
+dns_recursor_ip: <%= ip_prefix %>.1 # DNS IP address for resolving non-BOSH hostnames
 
 stemcell_version: "3312.17" # version of the stemcell used in all Kubo deployments. Quote the version to satisfy YAML parsers
 stemcell_url: "https://s3.amazonaws.com/bosh-core-stemcells/google/bosh-stemcell-3312.17-google-kvm-ubuntu-trusty-go_agent.tgz" # path to a stemcell used in all Kubo deployments
