--- a/docs/guides/gcp-oss-cf/director-secrets.yml.erb
+++ b/docs/guides/gcp-oss-cf/director-secrets.yml.erb
@@ -2,4 +2,4 @@
  raise "Expected environment variable 'common_secret' to be set" if ENV['common_secret'] == nil || ENV['common_secret'] == ''
 %>
 
-routing-cf-client-secret: <%=common_secret %> # UAA client secret for routing client
+routing-cf-client-secret: <%= ENV['common_secret'] %> # UAA client secret for routing client
