--- a/docs/guides/gcp-oss-cf/director.yml.erb
+++ b/docs/guides/gcp-oss-cf/director.yml.erb
@@ -24,6 +24,7 @@ cf-tcp-router-name: <%= ENV['tcp_router_domain'] %> # Hostname of TCP router. Us
 routing-cf-api-url: https://api.<%= ENV['cf_system_domain'] %> # TCP routing API URL. In PCF: https://api.<system domain>
 routing-cf-client-id: tcp_emitter # Routing UAA client name that will be used to register tcp routes
 routing-cf-uaa-url: https://uaa.<%= ENV['cf_system_domain'] %> # Routing UAA URL In PCF: https://uaa.<system domain>
+routing-cf-app-domain-name: apps.<%= ENV['cf_system_domain'] %>  # Cloud Foundry apps domain
 
 # we use BOSH 261 since CredHub 0.4 supports only it
 # CredHub 0.4 fixes important bug that breaks deployment
