--- a/docs/guides/gcp-oss-cf/director-secrets.yml.erb
+++ b/docs/guides/gcp-oss-cf/director-secrets.yml.erb
@@ -3,3 +3,4 @@
 %>
 
 routing-cf-client-secret: <%= ENV['common_secret'] %> # UAA client secret for routing client
+routing-cf-nats-password: <%= ENV['common_secret'] %> # Password for Cloud Foundry NATS
