--- a/docs/guides/gcp-cf/director.yml.erb
+++ b/docs/guides/gcp-cf/director.yml.erb
@@ -21,15 +21,10 @@ internal_ip: <%= ip_prefix %>.6 # Internal ip address of the BOSH director. Plea
 
 deployments_network: <%= ENV['network'] %> # Network name to deploy service in your cloud config
 
-cf-tcp-router-name: <%= ENV['tcp_router_domain'] %> # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
-routing-cf-api-url: https://api.<%= ENV['cf_system_domain'] %> # TCP routing API URL. In PCF: https://api.<system domain>
-routing-cf-client-id: <%= ENV['routing_cf_client_id'] %> # Routing UAA client name that will be used to register tcp routes
-routing-cf-uaa-url: https://uaa.<%= ENV['cf_system_domain'] %> # Routing UAA URL In PCF: https://uaa.<system domain>
-routing-cf-app-domain-name: <%= ENV['cf_apps_domain'] %> # Cloud Foundry apps domain
-routing-cf-nats-internal-ips: 
-  - <%= ENV['cf_nats_internal_ip'] %> # Internal IP address of Cloud Foundry NATS
-routing-cf-nats-username: nats
-routing-cf-nats-port: 4222
+# we use BOSH 261 since CredHub 0.4 supports only it
+# CredHub 0.4 fixes important bug that breaks deployment
+bosh_release_url: http://bosh.io/d/github.com/cloudfoundry/bosh?v=261.2 # URL to  261 bosh-director release https://s3.amazonaws.com/kubo-public/bosh-dev-release.tgz, or link to a local file
+bosh_release_sha1: d4635b4b82b0dc5fd083b83eb7e7405832f6654b # SHA1 of latest stable 261 bosh-director release
 
 credhub_encryption_key: <%= SecureRandom.hex(16) %> # 16 byte number in HEX format: i.e. ABCDEF0123456789ABCDEF0123456789
 
@@ -46,6 +41,24 @@ syslog-endpoint: ""
 
 credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
 kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
+
+# CF routing mode settings
+routing_mode: cf
+cf-tcp-router-name: <%= ENV['tcp_router_domain'] %> # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
+routing-cf-api-url: https://api.<%= ENV['cf_system_domain'] %> # TCP routing API URL. In PCF: https://api.<system domain>
+routing-cf-client-id: <%= ENV['routing_cf_client_id'] %> # Routing UAA client name that will be used to register tcp routes
+routing-cf-uaa-url: https://uaa.<%= ENV['cf_system_domain'] %> # Routing UAA URL In PCF: https://uaa.<system domain>
+routing-cf-app-domain-name: <%= ENV['cf_apps_domain'] %> # Cloud Foundry apps domain
+routing-cf-nats-internal-ips:
+  - <%= ENV['cf_nats_internal_ip'] %> # Internal IP address of Cloud Foundry NATS
+routing-cf-nats-username: nats
+routing-cf-nats-port: 4222
+
+# IaaS routing mode settings
+# Uncomment this section when using IaaS specific routing mode
+# routing_mode: iaas
+# kubernetes_api_url: <%= ENV['kubernetes_api_url'] %>
+# master_target_pool: <%= ENV['kubo_master_target_pool'] %>
 
 # uncomment these fields to configure proxy settings for docker
 # http_proxy:
