--- a/docs/guides/gcp/director.yml.erb
+++ b/docs/guides/gcp/director.yml.erb
@@ -42,19 +42,7 @@ kubernetes_api_ip: <%= ENV['kubernetes_api_ip'] %> # IP address that can be used
 master_target_pool: <%= ENV['kubo_master_target_pool'] %> # target pool that master nodes will be a part of
 worker_target_pool: <%= ENV['kubo_worker_target_pool'] %> # target pool that worker nodes will be a part of
 
-# CF routing mode settings
-# Uncomment and configure the lines below to leverage CF routing instead of IaaS routing
-# routing_mode: cf
-# cf-tcp-router-name: # Hostname of TCP router. Use `cf domains` to find existing TCP domain. If none exists, see https://docs.cloudfoundry.org/devguide/deploy-apps/routes-domains.html#shared-domains for instructions to create one.
-# routing-cf-api-url: # TCP routing API URL. In PCF: https://api.<system domain>
-# routing-cf-client-id: # Routing UAA client name that will be used to register tcp routes
-# routing-cf-uaa-url: # Routing UAA URL In PCF: https://uaa.<system domain>
-# routing-cf-app-domain-name: # Cloud Foundry apps domain
-# routing-cf-nats-internal-ips: # An array of internal IP address of Cloud Foundry NATS, e.g. [ '1.2.3.4' ]
-# routing-cf-nats-username: nats
-# routing-cf-nats-port: 4222
-
-# uncomment these fields to configure proxy settings for docker
+# Configure these fields to enable the proxy settings for docker
 # http_proxy:
 # https_proxy:
 # no_proxy:
