Update kubo-release URL
These did not get updated when we moved our blobstore/release bucket

--- a/docs/guides/gcp-cf/director.yml.erb
+++ b/docs/guides/gcp-cf/director.yml.erb
@@ -35,7 +35,7 @@ stemcell_url: "https://s3.amazonaws.com/bosh-core-stemcells/google/bosh-stemcell
 syslog-endpoint: ""
 
 credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
-kubo_release_url: https://s3.amazonaws.com/kubo-public/kubo-release-latest.tgz
+kubo_release_url: https://storage.googleapis.com/kubo-public/kubo-release-latest.tgz
 
 # CF routing mode settings
 routing_mode: cf
