--- a/docs/guides/gcp-cf/director.yml.erb
+++ b/docs/guides/gcp-cf/director.yml.erb
@@ -34,7 +34,7 @@ stemcell_version: "3312.17" # version of the stemcell used in all Kubo deploymen
 stemcell_url: "https://s3.amazonaws.com/bosh-core-stemcells/google/bosh-stemcell-3312.17-google-kvm-ubuntu-trusty-go_agent.tgz" # path to a stemcell used in all Kubo deployments
 syslog-endpoint: ""
 
-credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
+credhub_release_url: https://bosh.io/d/github.com/pivotal-cf/credhub-release?v=1.0.0
 kubo_release_url: https://storage.googleapis.com/kubo-public/kubo-release-latest.tgz
 
 # CF routing mode settings
