--- a/docs/guides/gcp/director.yml.erb
+++ b/docs/guides/gcp/director.yml.erb
@@ -32,7 +32,7 @@ dns_recursor_ip: <%=ip_prefix %>.1 # DNS IP address for resolving non-BOSH hostn
 stemcell_version: "3312.17" # version of the stemcell used in all Kubo deployments. Quote the version to satisfy YAML parsers
 stemcell_url: "https://s3.amazonaws.com/bosh-core-stemcells/google/bosh-stemcell-3312.17-google-kvm-ubuntu-trusty-go_agent.tgz" # path to a stemcell used in all Kubo deployments
 
-credhub_release_url: https://s3.amazonaws.com/kubo-public/credhub-0.4.0.tgz
+credhub_release_url: https://bosh.io/d/github.com/pivotal-cf/credhub-release?v=1.0.0
 kubo_release_url: https://storage.googleapis.com/kubo-public/kubo-release-latest.tgz
 
 # IaaS routing mode settings
